--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "supabase-types": "supabase gen types typescript --linked > src/lib/database.types.ts"
   },
   "dependencies": {
